third_party/move/move-compiler-v2/tests/match-checks/int_non_exhaustive_witness.exp

Diagnostics:
error: match not exhaustive
  ┌─ tests/match-checks/int_non_exhaustive_witness.move:3:16
  │
3 │         match (x) {
  │                ^
  │
  = missing `_`
